--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
     "version": "0.0.1",
     "scripts": {
         "dev": "sapper dev --src src/core --routes src/routes",
-        "build": "sapper build --src src/core --routes src/routes"
+        "build": "sapper build --src src/core --routes src/routes",
+        "doc": "typedoc --out doc/ --mode modules src/typescript/",
+        "start": "node __sapper__/build",
+        "cy:run": "cypress run",
+        "cy:open": "cypress open",
+        "lint": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.js src/**/*.js src/**/*.svelte --ignore-pattern src/core/",
+        "test": "run-p --race dev cy:run"
     },
     "devDependencies": {
         "@rollup/plugin-json": "^4.0.3",
         "@types/node": "^14.0.5",
+        "@typescript-eslint/parser": "^3.0.1",
         "autoprefixer": "^9.8.0",
+        "cypress": "^4.6.0",
+        "eslint": "^7.1.0",
+        "eslint-plugin-svelte3": "^2.7.3",
         "node-sass": "^4.14.1",
         "postcss-fakeid": "^1.0.2",
         "postcss-import": "^12.0.1",
