--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-svelte": "^5.2.2",
         "rollup-plugin-terser": "^6.1.0",
+        "sass": "^1.26.5",
         "svelte": "^3.22.3",
         "svelte-preprocess": "^3.7.4",
         "typescript": "^3.9.3"
