--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
-    wert-frontend:
+    frontend:
         build:
             context: .
             dockerfile: docker/Dockerfile
-        image: wert-frontend
-        container_name: wert-frontend
+        image: frontend
+        container_name: frontend
         restart: unless-stopped
         ports:
             - 3000:3000
