Running test in detatched

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
     - name: lint 
       run: yarn run lint
     - name: build-image 
-      run: docker-compose up
+      run: docker-compose up -d
 
